// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots components|m-input-style cursorPointer 1`] = `<!---->`;

exports[`Storyshots components|m-input-style default 1`] = `
<div
  class="m-input-style m--is-tag-default"
  style="margin-top: 10px;"
>
  <div
    class="m-input-style__main"
  >
    <div
      class="m-input-style__body"
    >
      <span
        class="m-input-style__label"
        style="z-index: -1;"
      >
        <span
          class="m-input-style__text"
        />
      </span>
       
      <div
        class="m-input-style__input"
      >
        <div
          class="m-input-style__prefix"
        />
         
        <div
          class="m-input-style__content"
        >
           
          <!---->
           
          <!---->
        </div>
         
        <div
          class="m-input-style__suffix"
        >
           
          <!---->
        </div>
      </div>
    </div>
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots components|m-input-style disabled 1`] = `<!---->`;

exports[`Storyshots components|m-input-style empty 1`] = `<!---->`;

exports[`Storyshots components|m-input-style error 1`] = `
<div>
  <!---->
  <p>
    Visual when the prop 
    <strong>
      error = true
    </strong>
     and prop 
    <strong>
      valide = true
    </strong>
  </p>
  <!---->
</div>
`;

exports[`Storyshots components|m-input-style focus 1`] = `<!---->`;

exports[`Storyshots components|m-input-style label 1`] = `<!---->`;

exports[`Storyshots components|m-input-style labelFor 1`] = `
<div
  style="margin: 0px;"
>
  <div
    class="m-input-style m--has-label m--is-tag-default"
    style="margin-top: 10px;"
  >
    <div
      class="m-input-style__main"
    >
      <div
        class="m-input-style__body"
      >
        <label
          class="m-input-style__label"
          for="Label for"
          style="margin-right: 0px;"
        >
          <span
            class="m-input-style__text"
          >
            <span>
              Label
            </span>
             
            <!---->
          </span>
        </label>
         
        <div
          class="m-input-style__input"
        >
          <!---->
           
          <div
            class="m-input-style__content"
          >
             
            <span
              aria-hidden="true"
              class="m-i18n m-input-style__transparent-text"
            >
              Aucune valeur
            </span>
             
            <!---->
          </div>
           
          <div
            class="m-input-style__suffix"
          >
             
            <!---->
          </div>
        </div>
      </div>
       
      <!---->
    </div>
  </div>
  <p>
    Open 
    <em>
      Page Inspector
    </em>
     to see 
    <strong>
      for
    </strong>
     attribute on label tag.
  </p>
</div>
`;

exports[`Storyshots components|m-input-style readonly 1`] = `<!---->`;

exports[`Storyshots components|m-input-style requiredMarker 1`] = `<!---->`;

exports[`Storyshots components|m-input-style rich text editor 1`] = `<!---->`;

exports[`Storyshots components|m-input-style tagStyle 1`] = `<!---->`;

exports[`Storyshots components|m-input-style testAllProps 1`] = `<!---->`;

exports[`Storyshots components|m-input-style valid 1`] = `
<div>
  <!---->
  <p>
    Visual when the prop 
    <strong>
      error = true
    </strong>
     and prop 
    <strong>
      valide = true
    </strong>
  </p>
  <!---->
</div>
`;

exports[`Storyshots components|m-input-style waiting 1`] = `<!---->`;

exports[`Storyshots components|m-input-style width 1`] = `<!---->`;
